@@ -19,6 +19,7 @@
 #include "Device/Driver/Volkslogger.hpp"
 #include "Device/Driver/EWMicroRecorder.hpp"
 #include "Device/Driver/LX.hpp"
+#include "Device/Driver/LX_Eos.hpp"
 #include "Device/Driver/IMI.hpp"
 #include "Device/Driver/Zander.hpp"
 #include "Device/Driver/FlymasterF1.hpp"
@@ -86,6 +87,7 @@ static const struct DeviceRegister *const driver_list[] = {
   &thermalexpress_driver,
   &acd_driver,
   &condor3_driver,
+  &lx_eos_driver,
   nullptr
 };
 
